--- a/index.html
+++ b/index.html
@@ -9,36 +9,26 @@
 <body>
     <header>ohmyfood</header>
     <section class="haut">
-        <div class="btn_note">
-            <a class="note" href="menu1"><p><i class="fas fa-music fa-2x"></i></p>
-            <p>la note enchantee</p>
-            <p>Menu</p></a>
-        </div>
-        <div class="btn_chic">
-            <a class="chic" href="menu2"><p>Le chic à la française</p>
-            <p>Menu</p></a>
-        </div>
+        <ul>
+            <li><a class="note" href="menu1"><p><i class="fas fa-music fa-2x"></i></p>
+                <p>la note enchantee</p>
+                <p>Menu</p></a></li>
+            <li><a class="chic" href="menu2"><p>Le chic à la française</p>
+                <p>Menu</p></a></li>
+        </ul>
     </section>
     <section class="bas">
-        <div class="btn_delice">
-            <a class="delice" href="menu3"><p>Le delices des papilles</p>
-            <p>Menu</p></a>
-        </div>
-        <div class="btn_gout">
-            <a class="gout" href="menu4"><p>La palette du goût</p>
-            <p>Menu</p></a>
-        </div>
+        <ul>
+            <li><a class="delice" href="menu3"><p>Le delices des papilles</p>
+                <p>Menu</p></a></li>
+            <li> <a class="gout" href="menu4"><p>La palette du goût</p>
+                <p>Menu</p></a></li>   
+        </ul>
     </section>
     <section class="btn">
         <p>Prochainement</p>
-        <div class="container">
-            <div class="load">
-            <div class="load__dot load__dot--1"></div>
-            <div class="load__dot load__dot--2"></div>
-            <div class="load__dot load__dot--3"></div>
-            <div class="load__dot load__dot--4"></div>
-            <div class="load__dot load__dot--5"></div>
-            </div>
+        <div class="btn_loading">
+        <span class="dot dot1">.</span><span class="dot dot2">.</span><span class="dot dot3">.</span>
         </div>
     </section>
     <footer>
