effet wiggle footer

--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
 <body>
     <header>ohmyfood</header>
     <section class="haut">
-        <ul>
-            <li><a class="note" href="menu1"><p><i class="fas fa-music fa-2x"></i></p>
-                <p>la note enchantee</p>
-                <p>Menu</p></a></li>
-            <li><a class="chic" href="menu2"><p>Le chic à la française</p>
-                <p>Menu</p></a></li>
-        </ul>
+        <div class="btn_note">
+            <p>
+                <a href="menu1"><i class="fas fa-music fa-2x"></i><br/>la note enchantee<br/>Menu</a>
+            </p>
+        </div>
+        <div class="btn_chic">
+            <p>
+                <a class="chic" href="menu2"><p>Le chic à la française<br/>Menu</a>
+            </p>
+        </div>  
     </section>
     <section class="bas">
-        <ul>
-            <li><a class="delice" href="menu3"><p>Le delices des papilles</p>
-                <p>Menu</p></a></li>
-            <li> <a class="gout" href="menu4"><p>La palette du goût</p>
-                <p>Menu</p></a></li>   
-        </ul>
+        <div class="btn_delice">
+            <p>
+                <a href="menu3">Le delices des papilles<br/>Menu<br/></a>
+            </p>
+        </div>
+        <div class="btn_gout">
+            <p>
+                <a href="menu4">La palette du goût<br/>Menu</a>
+            </p>
+        </div>   
     </section>
     <section class="btn">
-        <p>Prochainement</p>
+        <div>Prochainement</div>
         <div class="btn_loading">
         <span class="dot dot1">.</span><span class="dot dot2">.</span><span class="dot dot3">.</span>
         </div>
