Menu page writing

--- a/menu1.html
+++ b/menu1.html
@@ -9,14 +9,46 @@
 <body>
     <header>ohmyfood</header>
     <h1>La note enchantee</h1>
+    <section class="tete">
+        <p>
+            <i class="fas fa-music fa-2x"></i><br/>la note enchantee
+        </p>
+    </section>
     <section class="Prelude">
         <h2>Prelude</h2>
+        <div class="plat">
+            Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
+            Caviare osciètre sur blini à la farine de blé noir<br/>
+            Homard et espuma de potiron mariné aux zestes d'orange<br/>
+            Foie gras de canard cuit entier, confiture de figue et pain toasté
+        </div>
+        <div class="prix">
+            98€<br/>115€<br/>89€<br/>105€<br/>
+        </div>
     </section>
     <section class="Point d'orgue">
         <h2>Point d'orgue</h2>
+        <div class="plat">
+            Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
+            Langoustine poêlée sur lit de patate douce<br/>
+            Mijoté de queue de boeuf et riz sauvage aux zestes de citron<br/>
+        </div>
+        <div class="prix">
+            102€<br/>205€<br/>169€<br/>
+        </div>
     </section>
     <section class="Mouvement final">
         <h2>Mouvement final</h2>
+        <div class="plat">
+            Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
+            Baba au rhum revisité avec son coulis de citron<br/>
+            Tarte au citron meringuée déstructurée
+        </div>
+    </section>
+    <section class="pied">
+        <p>
+            <i class="fas fa-music fa-2x"></i>la note enchantee 
+        </p>
     </section>
     <footer>
         <div class="mention">
