Modification of css and html pages

--- a/menu1.html
+++ b/menu1.html
@@ -15,7 +15,7 @@
         </p>
     </section>
     <section class="Prelude">
-        <h2>Prelude</h2>
+        <h2>Prelude</h2>       
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
             Caviare osciètre sur blini à la farine de blé noir<br/>
@@ -26,7 +26,7 @@
             98€<br/>115€<br/>89€<br/>105€<br/>
         </div>
     </section>
-    <section class="Point d'orgue">
+    <section class="Point">
         <h2>Point d'orgue</h2>
         <div class="plat">
             Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
@@ -37,7 +37,7 @@
             102€<br/>205€<br/>169€<br/>
         </div>
     </section>
-    <section class="Mouvement final">
+    <section class="Mouvement">
         <h2>Mouvement final</h2>
         <div class="plat">
             Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
