--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     </section>
     <section class="btn">
         <div>Prochainement</div>
-        <div class="btn_loading">
-        <span class="dot dot1">.</span><span class="dot dot2">.</span><span class="dot dot3">.</span>
-        </div>
+        <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+          </div>
     </section>
     <footer>
         <div class="mention">
