--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </section>
     <section class="btn">
         <div>Prochainement</div>
-        <div class="spinner">
-            <div class="bounce1"></div>
-            <div class="bounce2"></div>
-            <div class="bounce3"></div>
+        <div class="loader">
+            <div class="dot1"></div>
+            <div class="dot2"></div>
+            <div class="dot3"></div>
           </div>
     </section>
     <footer>
