Style menu card

--- a/menu1.html
+++ b/menu1.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <header>ohmyfood</header>
-    <h1>La note enchantée</h1>
     <article class="menu1">
         <div class="tete">
             <p>
-                <i class="fas fa-music fa-2x"></i><br/>la note enchantée
+                <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
         <h2>Prelude</h2>       
