--- a/menu2.html
+++ b/menu2.html
@@ -20,7 +20,7 @@
                 79€<br/>57€<br/>57€<br/>
             </div>
         <h2>Plaisir des papilles</h2>
-            <div class="plat">
+            <div class="plat_papilles">
                 Coquilles Saint-jacques accompagnées d'une purée de panais<br/>
                 Magret de canard et parmentier de pommes de terres<br/>
                 Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes<br/>
