--- a/menu4.html
+++ b/menu4.html
@@ -11,7 +11,7 @@
     <article class="menu4">
         <h1>La palette du goût</h1>
         <h2>Esquisse</h2>       
-            <div class="plat">
+            <div class="plat_esquisse">
                 Fricassée d'escargot au piment d'espelette<br/>
                 Oeuf au plat assaisonné à la truffe sur lit de caviar<br/>
                 Foie gras de canard mi-cuit et ses copeaux de truffe noire<br/>
