--- a/menu3.html
+++ b/menu3.html
@@ -11,7 +11,7 @@
     <article class="menu3">
         <h1>Le délice des papilles</h1>
         <h2>Pour bien commencer</h2>       
-            <div class="plat">
+            <div class="plat_commencer">
                 Tartare de thon assaisonné au yuzu<br/>
                 Bouchée de homard croustillant et sa farandole de petits légumes<br/>
                 Velouté de cèpes aux truffes
@@ -29,7 +29,7 @@
                 110€<br/>225€<br/>115€<br/>
             </div>
         <h2>Pour bien terminer</h2>
-            <div class="plat">
+            <div class="plat_terminer">
                 Farandole de desserts du chef<br/>
                 Crème brulée revisitée<br/>
                 Tiramisu à la noisette
