--- a/menu2.html
+++ b/menu2.html
@@ -11,12 +11,12 @@
     <article class="menu2">
         <h1>Le chic à la française</h1>
         <h2>Pour se mettre en appetit</h2>       
-            <div class="plat">
+            <div class="plat_appetit">
                 Tartare de poulpe acidulé aux zests d'orange<br/>
                 Velouté de légumes d'antan<br/>
                 Soupe à l'oignon revisitée<br/>
             </div>
-            <div class="prix">
+            <div class="prix_appetit">
                 79€<br/>57€<br/>57€<br/>
             </div>
         <h2>Plaisir des papilles</h2>
@@ -25,11 +25,11 @@
                 Magret de canard et parmentier de pommes de terres<br/>
                 Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes<br/>
             </div>
-            <div class="prix">
+            <div class="prix_papilles">
                 95€<br/>88€<br/>175€<br/>
             </div>
         <h2>Gourmandises sucrées</h2>
-            <div class="plat">
+            <div class="plat_sucrée">
                 Pétales de violettes glacés et purée de noisettes<br/>
                 Fondant au chocolat revisité<br/>
                 Millefeuille croustillant
