Shadow + color home page + indentation

--- a/menu1.html
+++ b/menu1.html
@@ -8,38 +8,39 @@
 </head>
 <body>
     <header>ohmyfood</header>
-    <article class="menu1">
-        <div class="tete">
+    <h1>la note enchantée</h1>
+    <article class="menu1">   
+        <div class="header">
             <p>
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
         <h2>Prelude</h2>       
-            <div class="plat">
-                Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
-                Caviare osciètre sur blini à la farine de blé noir<br/>
-                Homard et espuma de potiron mariné aux zestes d'orange<br/>
-                Foie gras de canard cuit entier, confiture de figue et pain toasté
-            </div>
-            <div class="prix">
-                98€<br/>115€<br/>89€<br/>105€<br/>
-            </div>
+        <div class="plat">
+            Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
+            Caviare osciètre sur blini à la farine de blé noir<br/>
+            Homard et espuma de potiron mariné aux zestes d'orange<br/>
+            Foie gras de canard cuit entier, confiture de figue et pain toasté
+        </div>
+        <div class="prix">
+            98€<br/>115€<br/>89€<br/>105€<br/>
+        </div>
         <h2>Point d'orgue</h2>
-            <div class="plat">
-                Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
-                Langoustine poêlée sur lit de patate douce<br/>
-                Mijoté de queue de boeuf et riz sauvage aux zests de citron<br/>
-            </div>
-            <div class="prix">
-                102€<br/>205€<br/>169€<br/>
-            </div>
+        <div class="plat">
+            Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
+            Langoustine poêlée sur lit de patate douce<br/>
+            Mijoté de queue de boeuf et riz sauvage aux zests de citron<br/>
+        </div>
+        <div class="prix">
+            102€<br/>205€<br/>169€<br/>
+        </div>
         <h2>Mouvement final</h2>
-            <div class="plat">
-                Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
-                Baba au rhum revisité avec son coulis de citron<br/>
-                Tarte au citron meringuée déstructurée
-            </div>
-        <div class="pied">
+        <div class="plat">
+            Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
+            Baba au rhum revisité avec son coulis de citron<br/>
+            Tarte au citron meringuée déstructurée
+        </div>
+        <div class="footer">
             <p>
                 <i class="fas fa-music fa-2x"></i>la note enchantee 
             </p>
