--- a/menu4.html
+++ b/menu4.html
@@ -20,7 +20,7 @@
             60€<br/>55€<br/>65€<br/>
         </div>
         <h2>Oeuvre de maître</h2>
-        <div class="plat">
+        <div class="plat_maître">
             Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br/>
             Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<br/>
             Filet de Turbot aux agrumes<br/>
@@ -29,7 +29,7 @@
             70€<br/>85€<br/>125€<br/>
         </div>
         <h2>Au sommet de l'art</h2>
-        <div class="plat">
+        <div class="plat_art">
             Paris-Brest revisité<br/>
             Macaron au chocolat d'exception et glace à la vanille de Madagascar<br/>
             Mousse au chocolat au piment d'espelette et à la truffe noire
