--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
     <section class="haut">
         <div class="btn_note">
             <p>
-                <a href="menu1.html"><i class="fas fa-music fa-2x"></i><br/>la note enchantee<br/>Menu</a>
+                <a href="menu1.html"><i class="fas fa-music fa-2x"></i><br/>la note enchantee<br/><span class="carte_note">Menu</span></a>
             </p>
         </div>
         <div class="btn_chic">
             <p>
-                <a class="chic" href="menu2.html">Le chic à la française<br/>Menu</a>
+                <a class="chic" href="menu2.html">Le chic à la française<br/><span class="carte_chic">Menu</span></a>
             </p>
         </div>  
     </section>
     <section class="bas">
         <div class="btn_delice">
             <p>
-                <a href="menu3.html">Le delices des papilles<br/>Menu<br/></a>
+                <a href="menu3.html">Le delices des papilles<br/><span class="carte_delice">Menu</span><br/></a>
             </p>
         </div>
         <div class="btn_gout">
             <p>
-                <a href="menu4.html">La palette du goût<br/>Menu</a>
+                <a href="menu4.html">La palette du goût<br/><span class="carte_gout">Menu</span></a>
             </p>
         </div>   
     </section>
