--- a/menu1.html
+++ b/menu1.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
-        <h2>Prelude</h2>       
+        <img src="decoration_note.png" alt="décoration menu note"><h2>Prelude</h2><img src="decoration_note.png" alt="décoration menu note">       
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
             Caviare osciètre sur blini à la farine de blé noir<br/>
