--- a/menu1.html
+++ b/menu1.html
@@ -15,7 +15,7 @@
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
-        <img src="decoration_note.png" alt="décoration menu note"><h2>Prelude</h2><img src="decoration_note.png" alt="décoration menu note">       
+        <h2>Prelude</h2>       
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
             Caviare osciètre sur blini à la farine de blé noir<br/>
@@ -46,6 +46,9 @@
             </p>
         </div>
     </article>
+    <div id="btn_acceuil">
+        <p><a href="index.html">Acceuil</a></p>
+    </div>
     <footer>
         <div class="mention">
             <p><a href="mention.html" target="_blank">Mentions legales</a></p>
