--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
         </div>
         <div class="btn_chic">
             <p>
-                <a class="chic" href="menu2.html">Le chic à la française<br/><span class="carte_chic">Menu</span></a>
+                <a class="chic" href="menu2.html">Le chic à la française</a><br/>
+                <a class= "carte_chic" href="menu2.html">Menu</a>
             </p>
         </div>  
     </section>
     <section class="bas">
         <div class="btn_delice">
             <p>
-                <a href="menu3.html">Le delices des papilles<br/><span class="carte_delice">Menu</span><br/></a>
+                <a class="delice" href="menu3.html">Le delices des papilles</a><br/>
+                <a class= "carte_delice" href="menu3.html">Menu</a>
             </p>
         </div>
         <div class="btn_gout">
             <p>
-                <a href="menu4.html">La palette du goût<br/><span class="carte_gout">Menu</span></a>
+                <a class="gout" href="menu4.html">La palette du goût</a><br/>
+                <a class= "carte_gout" href="menu4.html">Menu</a>
             </p>
         </div>   
     </section>
