--- a/menu1.html
+++ b/menu1.html
@@ -7,7 +7,7 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>ohmyfood</header>
+    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
     <h1>la note enchantée</h1>
     <article class="menu1">   
         <div class="header">
@@ -46,9 +46,6 @@
             </p>
         </div>
     </article>
-    <div id="btn_acceuil">
-        <p><a href="index.html">Acceuil</a></p>
-    </div>
     <footer>
         <div class="mention">
             <p><a href="mention.html" target="_blank">Mentions legales</a></p>
