--- a/menu4.html
+++ b/menu4.html
@@ -7,7 +7,7 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>ohmyfood</header>
+    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
     <article class="menu4">
         <h1>La palette du goût</h1>
         <h2>Esquisse</h2>       
