--- a/menu2.html
+++ b/menu2.html
@@ -7,10 +7,10 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>ohmyfood</header>
+    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
     <article class="menu2">
         <h1>Le chic à la française</h1>
-        <h2>Pour se mettre en appetit</h2>       
+        <h2 class="titre_appetit">Pour se mettre en appetit</h2>       
         <div class="plat_appetit">
             Tartare de poulpe acidulé aux zests d'orange<br/>
             Velouté de légumes d'antan<br/>
@@ -19,7 +19,7 @@
         <div class="prix_appetit">
             79€<br/>57€<br/>57€<br/>
         </div>
-        <h2>Plaisir des papilles</h2>
+        <h3 class="titre_papilles">Plaisir des papilles</h3>
         <div class="plat_papilles">
             Coquilles Saint-jacques accompagnées d'une purée de panais<br/>
             Magret de canard et parmentier de pommes de terres<br/>
@@ -28,7 +28,7 @@
         <div class="prix_papilles">
             95€<br/>88€<br/>175€<br/>
         </div>
-        <h2>Gourmandises sucrées</h2>
+        <h4 class="titre_sucrée">Gourmandises sucrées</h4>
         <div class="plat_sucrée">
             Pétales de violettes glacés et purée de noisettes<br/>
             Fondant au chocolat revisité<br/>
