--- a/menu3.html
+++ b/menu3.html
@@ -7,7 +7,7 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>ohmyfood</header>
+    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
     <article class="menu3">
         <h1>Le délice des papilles</h1>
         <h2>Pour bien commencer</h2>       
