Effect style Menu2

--- a/menu2.html
+++ b/menu2.html
@@ -9,7 +9,7 @@
 <body>
     <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
     <article class="menu2">
-        <h1>Le chic à la française</h1>
+        <h1 class="titre_chic">Le chic à la française</h1>
         <h2 class="titre_appetit">Pour se mettre en appetit</h2>       
         <div class="plat_appetit">
             Tartare de poulpe acidulé aux zests d'orange<br/>
