--- a/menu1.html
+++ b/menu1.html
@@ -15,7 +15,9 @@
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
-        <h2>Prelude</h2>       
+        <p class="img_note1"><img src="menu1.jpeg" alt="décoration menu1"></p>
+         <h2>Prelude</h2>
+         <p class="img_note2"><img src="menu1.jpeg" alt="décoration menu1"></p>        
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
             Caviare osciètre sur blini à la farine de blé noir<br/>
