--- a/menu3.html
+++ b/menu3.html
@@ -10,7 +10,8 @@
     <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
     <article class="menu3">
         <h1>Le délice des papilles</h1>
-        <h2>Pour bien commencer</h2>       
+        <p class="img_papilles1a"><img src="menu3G1.jpeg" alt="décoration menu3">
+        </p><h2>Pour bien commencer</h2>       
         <div class="plat_commencer">
             Tartare de thon assaisonné au yuzu<br/>
             Bouchée de homard croustillant et sa farandole de petits légumes<br/>
