Import decoration menu cards

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>ohmyfood</header>
+    <header>
+        <h1>ohmyfood</h1>
+    </header>
     <section class="haut">
         <div class="btn_note">
             <p>
