--- a/menu2.html
+++ b/menu2.html
@@ -7,10 +7,12 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
+    <header>
+        <h1><a class="acceuil" href="index.html"> ohmyfood</a></h1>
+    </header>
     <article class="menu2">
-        <h1 class="titre_chic">Le chic à la française</h1>
-        <h2 class="titre_appetit">Pour se mettre en appetit</h2>       
+        <h2 class="titre_chic">Le chic à la française</h2>
+        <img src="menu2G1.jpeg" alt="décoration menu2"> <h3 class="titre_appetit">Pour se mettre en appetit</h3> <img src="menu2D1.jpeg" alt="décoration menu2">       
         <div class="plat_appetit">
             Tartare de poulpe acidulé aux zests d'orange<br/>
             Velouté de légumes d'antan<br/>
@@ -19,7 +21,7 @@
         <div class="prix_appetit">
             79€<br/>57€<br/>57€<br/>
         </div>
-        <h3 class="titre_papilles">Plaisir des papilles</h3>
+        <img src="menu2G2.jpeg" alt="décoration menu2"><h4 class="titre_papilles">Plaisir des papilles</h4> <img src="menu2D2.jpeg" alt="décoration menu2">
         <div class="plat_papilles">
             Coquilles Saint-jacques accompagnées d'une purée de panais<br/>
             Magret de canard et parmentier de pommes de terres<br/>
@@ -28,7 +30,7 @@
         <div class="prix_papilles">
             95€<br/>88€<br/>175€<br/>
         </div>
-        <h4 class="titre_sucrée">Gourmandises sucrées</h4>
+        <img src="menu2G3.jpeg" alt="décoration menu2"><h5 class="titre_sucrée">Gourmandises sucrées</h5> <img src="menu2D3.jpeg" alt="décoration menu2">
         <div class="plat_sucrée">
             Pétales de violettes glacés et purée de noisettes<br/>
             Fondant au chocolat revisité<br/>
