--- a/menu1.html
+++ b/menu1.html
@@ -7,17 +7,17 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
-    <h1>la note enchantée</h1>
+    <header>
+        <h1><a class="acceuil" href="index.html"> ohmyfood</a></h1>
+    </header>
+    <h2>la note enchantée</h2>
     <article class="menu1">   
         <div class="header">
             <p>
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
-        <p class="img_note1"><img src="menu1.jpeg" alt="décoration menu1"></p>
-         <h2>Prelude</h2>
-         <p class="img_note2"><img src="menu1.jpeg" alt="décoration menu1"></p>        
+        <img src="menu1.jpeg" alt="décoration menu1"></span><h3>Prelude</h3><img src="menu1.jpeg" alt="décoration menu1"></span>        
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
             Caviare osciètre sur blini à la farine de blé noir<br/>
@@ -27,7 +27,7 @@
         <div class="prix">
             98€<br/>115€<br/>89€<br/>105€<br/>
         </div>
-        <h2>Point d'orgue</h2>
+        <img src="menu1.jpeg" alt="décoration menu1"><h3>Point d'orgue</h3><img src="menu1.jpeg" alt="décoration menu1">
         <div class="plat">
             Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
             Langoustine poêlée sur lit de patate douce<br/>
@@ -36,7 +36,7 @@
         <div class="prix">
             102€<br/>205€<br/>169€<br/>
         </div>
-        <h2>Mouvement final</h2>
+        <img src="menu1.jpeg" alt="décoration menu1"><h3>Mouvement final</h3><img src="menu1.jpeg" alt="décoration menu1">
         <div class="plat">
             Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
             Baba au rhum revisité avec son coulis de citron<br/>
