--- a/menu3.html
+++ b/menu3.html
@@ -7,11 +7,12 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
+    <header>
+        <h1><a class="acceuil" href="index.html"> ohmyfood</a></h1>
+    </header>
     <article class="menu3">
-        <h1>Le délice des papilles</h1>
-        <p class="img_papilles1a"><img src="menu3G1.jpeg" alt="décoration menu3">
-        </p><h2>Pour bien commencer</h2>       
+        <h2>Le délice des papilles</h2>
+        <img src="menu3G1.jpeg" alt="décoration menu3"><h3>Pour bien commencer</h3><img src="menu3D1.jpeg" alt="décoration menu3">       
         <div class="plat_commencer">
             Tartare de thon assaisonné au yuzu<br/>
             Bouchée de homard croustillant et sa farandole de petits légumes<br/>
@@ -20,7 +21,7 @@
         <div class="prix">
             55€<br/>89€<br/>56€<br/>
         </div>
-        <h2>Pour bien continuer</h2>
+        <img src="menu3G2.jpeg" alt="décoration menu3"><h3>Pour bien continuer</h3><img src="menu3D2.jpeg" alt="décoration menu3">
         <div class="plat">
             Poulet rôti aux herbes de provence et sa crème de truffe<br/>
             Langouste rôtie et ses légumes de saison<br/>
@@ -29,7 +30,7 @@
         <div class="prix">
             110€<br/>225€<br/>115€<br/>
         </div>
-        <h2>Pour bien terminer</h2>
+        <img src="menu3G3.jpeg" alt="décoration menu3"><h3>Pour bien terminer</h3><img src="menu3D3.jpeg" alt="décoration menu3">
         <div class="plat_terminer">
             Farandole de desserts du chef<br/>
             Crème brulée revisitée<br/>
