--- a/menu4.html
+++ b/menu4.html
@@ -7,10 +7,12 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header><a class="acceuil" href="index.html"> ohmyfood</a></header>
+    <header>
+        <h1><a class="acceuil" href="index.html"> ohmyfood</a></h1>
+    </header>
     <article class="menu4">
-        <h1>La palette du goût</h1>
-        <h2>Esquisse</h2>       
+        <h2>La palette du goût</h2>
+        <img src="menu4G.jpeg" alt="décoration menu4"><h3>Esquisse</h3><img src="menu4D.jpeg" alt="décoration menu4">       
         <div class="plat_esquisse">
             Fricassée d'escargot au piment d'espelette<br/>
             Oeuf au plat assaisonné à la truffe sur lit de caviar<br/>
@@ -19,7 +21,7 @@
         <div class="prix">
             60€<br/>55€<br/>65€<br/>
         </div>
-        <h2>Oeuvre de maître</h2>
+        <img src="menu4G.jpeg" alt="décoration menu4"><h3>Oeuvre de maître</h3><img src="menu4D.jpeg" alt="décoration menu4">
         <div class="plat_maître">
             Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br/>
             Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<br/>
@@ -28,7 +30,7 @@
         <div class="prix">
             70€<br/>85€<br/>125€<br/>
         </div>
-        <h2>Au sommet de l'art</h2>
+        <img src="menu4G.jpeg" alt="décoration menu4"><h3>Au sommet de l'art</h3><img src="menu4D.jpeg" alt="décoration menu4">
         <div class="plat_art">
             Paris-Brest revisité<br/>
             Macaron au chocolat d'exception et glace à la vanille de Madagascar<br/>
