Habillage carte menu

--- a/menu1.html
+++ b/menu1.html
@@ -17,7 +17,11 @@
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
         </div>
-        <img src="menu1.jpeg" alt="décoration menu1"></span><h3>Prelude</h3><img src="menu1.jpeg" alt="décoration menu1"></span>        
+        <div class="element_decor">
+            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+            <p><h3>Prelude</h3></p>
+            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+        </div>        
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
             Caviare osciètre sur blini à la farine de blé noir<br/>
@@ -27,7 +31,11 @@
         <div class="prix">
             98€<br/>115€<br/>89€<br/>105€<br/>
         </div>
-        <img src="menu1.jpeg" alt="décoration menu1"><h3>Point d'orgue</h3><img src="menu1.jpeg" alt="décoration menu1">
+        <div class="element_decor">
+            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+            <p><h3>Point d'orgue</h3></p>
+            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+        </div>        
         <div class="plat">
             Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
             Langoustine poêlée sur lit de patate douce<br/>
@@ -36,7 +44,11 @@
         <div class="prix">
             102€<br/>205€<br/>169€<br/>
         </div>
-        <img src="menu1.jpeg" alt="décoration menu1"><h3>Mouvement final</h3><img src="menu1.jpeg" alt="décoration menu1">
+        <div class="element_decor">
+            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+            <p><h3>Mouvement final</h3></p>
+            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+        </div>        
         <div class="plat">
             Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
             Baba au rhum revisité avec son coulis de citron<br/>
