--- a/menu3.html
+++ b/menu3.html
@@ -12,7 +12,11 @@
     </header>
     <article class="menu3">
         <h2>Le délice des papilles</h2>
-        <img src="menu3G1.jpeg" alt="décoration menu3"><h3>Pour bien commencer</h3><img src="menu3D1.jpeg" alt="décoration menu3">       
+        <div class="element_decor">
+            <p><img src="menu3G1.jpeg" alt="décoration menu3"></p>
+            <p><h3>Pour bien commencer</h3></p>
+            <p><img src="menu3D1.jpeg" alt="décoration menu3"></p>
+        </div>               
         <div class="plat_commencer">
             Tartare de thon assaisonné au yuzu<br/>
             Bouchée de homard croustillant et sa farandole de petits légumes<br/>
@@ -21,7 +25,11 @@
         <div class="prix">
             55€<br/>89€<br/>56€<br/>
         </div>
-        <img src="menu3G2.jpeg" alt="décoration menu3"><h3>Pour bien continuer</h3><img src="menu3D2.jpeg" alt="décoration menu3">
+        <div class="element_decor">
+            <p><img src="menu3G2.jpeg" alt="décoration menu3"></p>
+            <p><h3>Pour bien continuer</h3></p>
+            <p><img src="menu3D2.jpeg" alt="décoration menu3"></p>
+        </div>        
         <div class="plat">
             Poulet rôti aux herbes de provence et sa crème de truffe<br/>
             Langouste rôtie et ses légumes de saison<br/>
@@ -30,7 +38,11 @@
         <div class="prix">
             110€<br/>225€<br/>115€<br/>
         </div>
-        <img src="menu3G3.jpeg" alt="décoration menu3"><h3>Pour bien terminer</h3><img src="menu3D3.jpeg" alt="décoration menu3">
+        <div class="element_decor">
+            <p><img src="menu3G3.jpeg" alt="décoration menu3"></p>
+            <p><h3>Pour bien terminer</h3></p>
+            <p><img src="menu3D3.jpeg" alt="décoration menu3"></p>
+        </div>        
         <div class="plat_terminer">
             Farandole de desserts du chef<br/>
             Crème brulée revisitée<br/>
