--- a/menu2.html
+++ b/menu2.html
@@ -12,7 +12,11 @@
     </header>
     <article class="menu2">
         <h2 class="titre_chic">Le chic à la française</h2>
-        <img src="menu2G1.jpeg" alt="décoration menu2"> <h3 class="titre_appetit">Pour se mettre en appetit</h3> <img src="menu2D1.jpeg" alt="décoration menu2">       
+        <div class="element_decor">
+            <p><img src="menu2G1.jpeg" alt="décoration menu2"></p>
+            <p><h3 class="titre_appetit">Pour se mettre en appetit </h3></p>
+            <p><img src="menu2D1.jpeg" alt="décoration menu2"></p>
+        </div>               
         <div class="plat_appetit">
             Tartare de poulpe acidulé aux zests d'orange<br/>
             Velouté de légumes d'antan<br/>
@@ -21,7 +25,11 @@
         <div class="prix_appetit">
             79€<br/>57€<br/>57€<br/>
         </div>
-        <img src="menu2G2.jpeg" alt="décoration menu2"><h4 class="titre_papilles">Plaisir des papilles</h4> <img src="menu2D2.jpeg" alt="décoration menu2">
+        <div class="element_decor">
+            <p><img src="menu2G2.jpeg" alt="décoration menu2"></p>
+            <p><h4 class="titre_papilles">Plaisir des papilles</h4></p>
+            <p><img src="menu2D2.jpeg" alt="décoration menu2"></p>
+        </div>               
         <div class="plat_papilles">
             Coquilles Saint-jacques accompagnées d'une purée de panais<br/>
             Magret de canard et parmentier de pommes de terres<br/>
@@ -30,7 +38,11 @@
         <div class="prix_papilles">
             95€<br/>88€<br/>175€<br/>
         </div>
-        <img src="menu2G3.jpeg" alt="décoration menu2"><h5 class="titre_sucrée">Gourmandises sucrées</h5> <img src="menu2D3.jpeg" alt="décoration menu2">
+        <div class="element_decor">
+            <p><img src="menu2G3.jpeg" alt="décoration menu2"></p>
+            <p><h5 class="titre_sucrée">Gourmandises sucrées</h5></p>
+            <p><img src="menu2D3.jpeg" alt="décoration menu2"></p>
+        </div>               
         <div class="plat_sucrée">
             Pétales de violettes glacés et purée de noisettes<br/>
             Fondant au chocolat revisité<br/>
