--- a/menu4.html
+++ b/menu4.html
@@ -12,7 +12,11 @@
     </header>
     <article class="menu4">
         <h2>La palette du goût</h2>
-        <img src="menu4G.jpeg" alt="décoration menu4"><h3>Esquisse</h3><img src="menu4D.jpeg" alt="décoration menu4">       
+        <div class="element_decor">
+            <p><img src="menu4G.jpeg" alt="décoration menu4"></p>
+            <p><h3>Esquisse</h3></p>
+            <p><img src="menu4D.jpeg" alt="décoration menu4"></p>
+        </div>               
         <div class="plat_esquisse">
             Fricassée d'escargot au piment d'espelette<br/>
             Oeuf au plat assaisonné à la truffe sur lit de caviar<br/>
@@ -21,7 +25,11 @@
         <div class="prix">
             60€<br/>55€<br/>65€<br/>
         </div>
-        <img src="menu4G.jpeg" alt="décoration menu4"><h3>Oeuvre de maître</h3><img src="menu4D.jpeg" alt="décoration menu4">
+        <div class="element_decor">
+            <p><img src="menu4G.jpeg" alt="décoration menu4"></p>
+            <p><h3>Oeuvre de maître</h3></p>
+            <p><img src="menu4D.jpeg" alt="décoration menu4"></p>
+        </div>               
         <div class="plat_maître">
             Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br/>
             Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<br/>
@@ -30,7 +38,11 @@
         <div class="prix">
             70€<br/>85€<br/>125€<br/>
         </div>
-        <img src="menu4G.jpeg" alt="décoration menu4"><h3>Au sommet de l'art</h3><img src="menu4D.jpeg" alt="décoration menu4">
+        <div class="element_decor">
+            <p><img src="menu4G.jpeg" alt="décoration menu4"></p>
+            <p><h3>Au sommet de l'art</h3></p>
+            <p><img src="menu4D.jpeg" alt="décoration menu4"></p>
+        </div>               
         <div class="plat_art">
             Paris-Brest revisité<br/>
             Macaron au chocolat d'exception et glace à la vanille de Madagascar<br/>
