Nouvelle indentation html

--- a/menu4.html
+++ b/menu4.html
@@ -11,11 +11,13 @@
         <h1><a class="acceuil" href="index.html">ohmyfood</a></h1>
     </header>
     <article class="menu4">
-        <h2>La palette du goût</h2>
+        <header>
+            <h2>La palette du goût</h2>
+        </header>
         <div class="element_decor">
-            <p><img src="menu4G.jpeg" alt="décoration menu4"></p>
-            <p><h3>Esquisse</h3></p>
-            <p><img src="menu4D.jpeg" alt="décoration menu4"></p>
+            <span><img src="menu4G.jpeg" alt="décoration menu4"></span>
+            <h3>Esquisse</h3>
+            <span><img src="menu4D.jpeg" alt="décoration menu4"></span>
         </div>               
         <div class="plat_esquisse">
             Fricassée d'escargot au piment d'espelette<br/>
@@ -26,9 +28,9 @@
             60€<br/>55€<br/>65€<br/>
         </div>
         <div class="element_decor">
-            <p><img src="menu4G.jpeg" alt="décoration menu4"></p>
-            <p><h3>Oeuvre de maître</h3></p>
-            <p><img src="menu4D.jpeg" alt="décoration menu4"></p>
+            <span><img src="menu4G.jpeg" alt="décoration menu4"></span>
+            <h3>Oeuvre de maître</h3>
+            <span><img src="menu4D.jpeg" alt="décoration menu4"></span>
         </div>               
         <div class="plat_maître">
             Filet de boeuf aux herbes accompagné de sa ribambelle de légumes<br/>
@@ -39,9 +41,9 @@
             70€<br/>85€<br/>125€<br/>
         </div>
         <div class="element_decor">
-            <p><img src="menu4G.jpeg" alt="décoration menu4"></p>
-            <p><h3>Au sommet de l'art</h3></p>
-            <p><img src="menu4D.jpeg" alt="décoration menu4"></p>
+            <span><img src="menu4G.jpeg" alt="décoration menu4"></span>
+            <h3>Au sommet de l'art</h3>
+            <span><img src="menu4D.jpeg" alt="décoration menu4"></span>
         </div>               
         <div class="plat_art">
             Paris-Brest revisité<br/>
