--- a/menu1.html
+++ b/menu1.html
@@ -12,15 +12,15 @@
     </header>
     <h2>la note enchantée</h2>
     <article class="menu1">   
-        <div class="header">
+        <header>
             <p>
                 <i class="fas fa-music fa-2x"></i><br/><br/>la note enchantée
             </p>
-        </div>
+        </header>
         <div class="element_decor">
-            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
-            <p><h3>Prelude</h3></p>
-            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <h3>Prelude</h3>
+            <sapn><img src="menu1.jpeg" alt="décoration menu1"></sapn>
         </div>        
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
@@ -32,9 +32,9 @@
             98€<br/>115€<br/>89€<br/>105€<br/>
         </div>
         <div class="element_decor">
-            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
-            <p><h3>Point d'orgue</h3></p>
-            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <h3>Point d'orgue</h3>
+            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
         </div>        
         <div class="plat">
             Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
@@ -45,20 +45,20 @@
             102€<br/>205€<br/>169€<br/>
         </div>
         <div class="element_decor">
-            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
-            <p><h3>Mouvement final</h3></p>
-            <p><img src="menu1.jpeg" alt="décoration menu1"></p>
+            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <h3>Mouvement final</h3>
+            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
         </div>        
         <div class="plat">
             Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
             Baba au rhum revisité avec son coulis de citron<br/>
             Tarte au citron meringuée déstructurée
         </div>
-        <div class="footer">
-            <p>
+        <footer>
+            <span>
                 <i class="fas fa-music fa-2x"></i>la note enchantee 
-            </p>
-        </div>
+            </span>
+        </footer>
     </article>
     <footer>
         <div class="mention">
