--- a/menu1.html
+++ b/menu1.html
@@ -32,9 +32,9 @@
             98€<br/>115€<br/>89€<br/>105€<br/>
         </div>
         <div class="element_decor">
-            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
             <h3>Point d'orgue</h3>
-            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
         </div>        
         <div class="plat">
             Noix de coquilles Saint-jacques sur lit de purée de céleri-rave<br/>
