Indentation des images de décoration

--- a/menu1.html
+++ b/menu1.html
@@ -18,9 +18,9 @@
             </p>
         </header>
         <div class="element_decor">
-            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
             <h3>Prelude</h3>
-            <sapn><img src="menu1.jpeg" alt="décoration menu1"></sapn>
+            <sapn><img src="Images/menu1.jpeg" alt="décoration menu1"></sapn>
         </div>        
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
@@ -45,20 +45,20 @@
             102€<br/>205€<br/>169€<br/>
         </div>
         <div class="element_decor">
-            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
             <h3>Mouvement final</h3>
-            <span><img src="menu1.jpeg" alt="décoration menu1"></span>
+            <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
         </div>        
         <div class="plat">
             Macaron noisette et chocolat, glace au caramel brun et sel de guérande<br/>
             Baba au rhum revisité avec son coulis de citron<br/>
             Tarte au citron meringuée déstructurée
         </div>
-        <footer>
-            <span>
+        <div class="footer">
+            <p>
                 <i class="fas fa-music fa-2x"></i>la note enchantee 
-            </span>
-        </footer>
+            </p>
+        </div>
     </article>
     <footer>
         <div class="mention">
