--- a/menu2.html
+++ b/menu2.html
@@ -15,9 +15,9 @@
             <h2 class="titre_chic">Le chic à la française</h2>
         </header>
         <div class="element_decor">
-            <span><img src="menu2G1.jpeg" alt="décoration menu2"></span>
+            <span><img src="Images/menu2G1.jpeg" alt="décoration menu2"></span>
             <h3 class="titre_appetit">Pour se mettre en appetit </h3>
-            <span><img src="menu2D1.jpeg" alt="décoration menu2"></span>
+            <span><img src="Images/menu2D1.jpeg" alt="décoration menu2"></span>
         </div>               
         <div class="plat_appetit">
             Tartare de poulpe acidulé aux zests d'orange<br/>
@@ -28,9 +28,9 @@
             79€<br/>57€<br/>57€<br/>
         </div>
         <div class="element_decor">
-            <span><img src="menu2G2.jpeg" alt="décoration menu2"></span>
+            <span><img src="Images/menu2G2.jpeg" alt="décoration menu2"></span>
             <h4 class="titre_papilles">Plaisir des papilles</h4>
-            <span><img src="menu2D2.jpeg" alt="décoration menu2"></span>
+            <span><img src="Images/menu2D2.jpeg" alt="décoration menu2"></span>
         </div>               
         <div class="plat_papilles">
             Coquilles Saint-jacques accompagnées d'une purée de panais<br/>
@@ -41,9 +41,9 @@
             95€<br/>88€<br/>175€<br/>
         </div>
         <div class="element_decor">
-            <span><img src="menu2G3.jpeg" alt="décoration menu2"></span>
+            <span><img src="Images/menu2G3.jpeg" alt="décoration menu2"></span>
             <h5 class="titre_sucrée">Gourmandises sucrées</h5>
-            <span><img src="menu2D3.jpeg" alt="décoration menu2"></span>
+            <span><img src="Images/menu2D3.jpeg" alt="décoration menu2"></span>
         </div>               
         <div class="plat_sucrée">
             Pétales de violettes glacés et purée de noisettes<br/>
