--- a/menu3.html
+++ b/menu3.html
@@ -15,9 +15,9 @@
             <h2>Le délice des papilles</h2>
         </header>
         <div class="element_decor">
-            <span><img src="menu3G1.jpeg" alt="décoration menu3"></span>
+            <span><img src="Images/menu3G1.jpeg" alt="décoration menu3"></span>
             <h3>Pour bien commencer</h3>
-            <span><img src="menu3D1.jpeg" alt="décoration menu3"></span>
+            <span><img src="Images/menu3D1.jpeg" alt="décoration menu3"></span>
         </div>               
         <div class="plat_commencer">
             Tartare de thon assaisonné au yuzu<br/>
@@ -28,9 +28,9 @@
             55€<br/>89€<br/>56€<br/>
         </div>
         <div class="element_decor">
-            <span><img src="menu3G2.jpeg" alt="décoration menu3"></span>
+            <span><img src="Images/menu3G2.jpeg" alt="décoration menu3"></span>
             <h3>Pour bien continuer</h3>
-            <span><img src="menu3D2.jpeg" alt="décoration menu3"></span>
+            <span><img src="Images/menu3D2.jpeg" alt="décoration menu3"></span>
         </div>        
         <div class="plat">
             Poulet rôti aux herbes de provence et sa crème de truffe<br/>
@@ -41,9 +41,9 @@
             110€<br/>225€<br/>115€<br/>
         </div>
         <div class="element_decor">
-            <span><img src="menu3G3.jpeg" alt="décoration menu3"></span>
+            <span><img src="Images/menu3G3.jpeg" alt="décoration menu3"></span>
             <h3>Pour bien terminer</h3>
-            <span><img src="menu3D3.jpeg" alt="décoration menu3"></span>
+            <span><img src="Images/menu3D3.jpeg" alt="décoration menu3"></span>
         </div>        
         <div class="plat_terminer">
             Farandole de desserts du chef<br/>
