Ajout de titres H2 sur carte menu

--- a/menu1.html
+++ b/menu1.html
@@ -20,7 +20,7 @@
         <div class="element_decor">
             <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
             <h3>Prelude</h3>
-            <sapn><img src="Images/menu1.jpeg" alt="décoration menu1"></sapn>
+            <span><img src="Images/menu1.jpeg" alt="décoration menu1"></span>
         </div>        
         <div class="plat">
             Ravioles de foie gras accompagnes de leur crème à la truffe<br/>
