--- a/menu2.html
+++ b/menu2.html
@@ -10,6 +10,7 @@
     <header>
         <h1><a class="acceuil" href="index.html">ohmyfood</a></h1>
     </header>
+    <h2>le chic à la française</h2>
     <article class="menu2">
         <header>
             <h2 class="titre_chic">Le chic à la française</h2>
