--- a/menu3.html
+++ b/menu3.html
@@ -10,6 +10,7 @@
     <header>
         <h1><a class="acceuil" href="index.html">ohmyfood</a></h1>
     </header>
+    <h2>le délice des papilles</h2>
     <article class="menu3">
         <header>
             <h2>Le délice des papilles</h2>
