--- a/menu4.html
+++ b/menu4.html
@@ -10,6 +10,7 @@
     <header>
         <h1><a class="acceuil" href="index.html">ohmyfood</a></h1>
     </header>
+    <h2>la palette du goût</h2>
     <article class="menu4">
         <header>
             <h2>La palette du goût</h2>
