Ajout page mentions légales

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </section>
     <footer>
         <div class="mention">
-            <p><a href="pagevide.html" target="_blank">Mentions legales</a></p>
+            <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
         <div class="contact">
             <p><a href="mailto:****@gmail.com" target="_blank">Contactez-nous</a></p>
