--- a/menu1.html
+++ b/menu1.html
@@ -62,7 +62,7 @@
     </article>
     <footer>
         <div class="mention">
-            <p><a href="mention.html" target="_blank">Mentions legales</a></p>
+            <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
         <div class="contact">
             <p><a href="mailto:****@gmail.com" target="_blank">Contactez-nous</a></p>
