--- a/menu3.html
+++ b/menu3.html
@@ -33,7 +33,7 @@
             <h3>Pour bien continuer</h3>
             <span><img src="Images/menu3D2.jpeg" alt="décoration menu3"></span>
         </div>        
-        <div class="plat">
+        <div class="plat_continuer">
             Poulet rôti aux herbes de provence et sa crème de truffe<br/>
             Langouste rôtie et ses légumes de saison<br/>
             Côte de boeuf angus et sa purée de panais
