--- a/menu4.html
+++ b/menu4.html
@@ -25,7 +25,7 @@
             Oeuf au plat assaisonné à la truffe sur lit de caviar<br/>
             Foie gras de canard mi-cuit et ses copeaux de truffe noire<br/>
         </div>
-        <div class="prix">
+        <div class="prix_esquisse">
             60€<br/>55€<br/>65€<br/>
         </div>
         <div class="element_decor">
@@ -51,7 +51,7 @@
             Macaron au chocolat d'exception et glace à la vanille de Madagascar<br/>
             Mousse au chocolat au piment d'espelette et à la truffe noire
         </div>
-        <div class="prix">
+        <div class="prix_art">
             55€<br/>65€<br/>60€<br/>
         </div>
     </article>
