Finalisation version PC

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="dot3"></div>
           </div>
     </section>
-    <footer>
+    <footer class="pied_de_page">
         <div class="mention">
             <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
