--- a/mentions.html
+++ b/mentions.html
@@ -10,7 +10,7 @@
     <header>
         <h1><a class="acceuil" href="index.html">ohmyfood</a></h1>
     </header>
-    <footer>
+    <footer class="pied_de_page">
         <div class="mention">
             <p><a href="mention.html" target="_blank">Mentions legales</a></p>
         </div>
