--- a/menu1.html
+++ b/menu1.html
@@ -54,13 +54,13 @@
             Baba au rhum revisité avec son coulis de citron<br/>
             Tarte au citron meringuée déstructurée
         </div>
-        <div class="footer">
+        <footer>
             <p>
                 <i class="fas fa-music fa-2x"></i>la note enchantee 
             </p>
-        </div>
+        </footer>
     </article>
-    <footer>
+    <footer class="pied_de_page">
         <div class="mention">
             <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
