--- a/menu3.html
+++ b/menu3.html
@@ -55,7 +55,7 @@
         55€<br/>60€<br/>55€
         </div>    
     </article>
-    <footer>
+    <footer class="pied_de_page">
         <div class="mention">
             <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
