--- a/menu2.html
+++ b/menu2.html
@@ -52,7 +52,7 @@
             Millefeuille croustillant
         </div>
     </article>
-    <footer>
+    <footer class="pied_de_page">
         <div class="mention">
             <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
