--- a/menu4.html
+++ b/menu4.html
@@ -55,7 +55,7 @@
             55€<br/>65€<br/>60€<br/>
         </div>
     </article>
-    <footer>
+    <footer class="pied_de_page">
         <div class="mention">
             <p><a href="mentions.html" target="_blank">Mentions legales</a></p>
         </div>
